force-app/main/default/objects/ServiceResource/fields/FSL__Efficiency__c.field-meta.xml
<CustomField>
    <fullName>FSL__Efficiency__c</fullName>
    <label>Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>