force-app/main/default/objects/ServiceResource/fields/FSL__Picture_Link__c.field-meta.xml
<CustomField>
    <fullName>FSL__Picture_Link__c</fullName>
    <label>Picture Link</label>
    <type>Url</type>
</CustomField>