force-app/main/default/objects/ServiceResource/validationRules/FSL__Resource_travel.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Resource_travel</fullName>
    <active>true</active>
    <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
    <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
</ValidationRule>