force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsCapacityBased</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los recursos de servicios</label>
</ListView>